Le jeu est centré par le DOM plutôt que par des calculs

--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,22 @@
       padding: 0;
       overflow: hidden;
     }
+
+    body {
+      background-color: black;
+    }
+
+    .wrapper {
+      display: flex;
+      justify-content: center;
+    }
   </style>
 </head>
 
 <body>
-  <canvas id="app"></canvas>
+  <div class="wrapper">
+    <canvas id="app"></canvas>
+  </div>
 
   <script src="app.js"></script>
 </body>
