--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,29 @@
       flex-direction: column;
     }
 
+    h1 {
+      background-color: #42c79c;
+      color: #fff;
+      margin: 0;
+      margin-bottom: 16px;
+      padding: 16px;
+      text-align: center;
+      text-transform: uppercase;
+    }
+
+    .btn-play {
+      padding: 20px 40px;
+      display: inline-block;
+      border: 2px solid orange;
+      border-bottom-width: 12px;
+      text-align: center;
+      font-size: 2em;
+      text-transform: uppercase;
+      color: orange;
+      text-decoration: none;
+      margin: 0 auto;
+    }
+
     .levels {
       list-style: none;
       display: grid;
@@ -32,7 +55,8 @@
       overflow: auto;
       scrollbar-color: #42c79c rgba(0, 0, 0, 0.3);
       scrollbar-width: thin;
-      padding: 12px;
+      margin: 12px;
+      justify-content: center;
     }
 
     .level a {
