--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <title>Bobby</title>
+  <meta name="description" content="Petit jeu de réflexion." />
 
   <style>
     html,
