Préparation à l'ajout de contrôles sur l'écran de jeu

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,6 @@
       background-color: #42c79c;
       color: #fff;
       margin: 0;
-      margin-bottom: 16px;
       padding: 16px;
       text-align: center;
       text-transform: uppercase;
@@ -46,7 +45,7 @@
       text-transform: uppercase;
       color: orange;
       text-decoration: none;
-      margin: 0 auto;
+      margin: 16px auto;
     }
 
     .levels {
@@ -58,6 +57,7 @@
       scrollbar-color: #42c79c rgba(0, 0, 0, 0.3);
       scrollbar-width: thin;
       margin: 12px;
+      margin-top: 32px;
       justify-content: center;
     }
 
