Fond noir lorsqu'en jeu

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
       background-color: #f7f3ef;
     }
 
+    .bg-dark {
+      background-color: #222;
+    }
+
     button,
     input,
     textarea,
