Jeu centré verticalement

--- a/index.html
+++ b/index.html
@@ -149,6 +149,12 @@
       background: #ccc;
       cursor: pointer;
     }
+
+    #app-wrapper {
+      height: 100%;
+      display: grid;
+      align-content: center;
+    }
   </style>
 </head>
 
