Possibilité d'effacer sa progression

--- a/index.html
+++ b/index.html
@@ -41,15 +41,27 @@
       flex-direction: column;
     }
 
+    .btn {
+      padding: 10px 20px;
+      display: inline-block;
+      border: none;
+      background-color: #fe9b55;
+      text-align: center;
+      font-size: 1.4em;
+      color: white;
+      text-decoration: none;
+      margin: 16px auto;
+    }
+
     .btn-play {
       padding: 20px 40px;
       display: inline-block;
-      border: 2px solid orange;
+      border: 2px solid #fe9b55;
       border-bottom-width: 12px;
       text-align: center;
       font-size: 2em;
       text-transform: uppercase;
-      color: orange;
+      color: #fe9b55;
       text-decoration: none;
       margin: 16px auto;
     }
