Amélioration des contrastes

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       padding: 10px 20px;
       display: inline-block;
       border: none;
-      background-color: #fe9b55;
+      background-color: #cf5600;
       text-align: center;
       font-size: 1.4em;
       color: white;
@@ -56,14 +56,14 @@
 
     .btn:focus,
     .btn:hover {
-      outline: 3px solid rgba(0, 0, 0, 0.6);
+      outline: 3px solid #642d06;
       cursor: pointer;
     }
 
     .btn-play {
       padding: 20px 40px;
       display: inline-block;
-      color: #fe9b55;
+      color: #cf5600;
       border: 2px solid currentColor;
       border-bottom-width: 12px;
       text-align: center;
@@ -75,8 +75,9 @@
 
     .btn-play:focus,
     .btn-play:hover {
-      color: #b15c20;
+      color: #401f08;
       cursor: pointer;
+      outline: none;
     }
 
     .levels {
@@ -85,7 +86,7 @@
       grid-template-columns: repeat(auto-fill, 60px);
       gap: 16px;
       overflow: auto;
-      scrollbar-color: #42c79c rgba(0, 0, 0, 0.3);
+      scrollbar-color: #177355 rgba(0, 0, 0, 0.3);
       scrollbar-width: thin;
       margin: 12px;
       margin-top: 32px;
@@ -104,7 +105,7 @@
 
     .level a:focus,
     .level a:hover {
-      outline: 3px solid rgba(0, 0, 0, 0.6);
+      outline: 3px solid #053123;
     }
 
     .level.accessible a {
@@ -112,11 +113,11 @@
     }
 
     .level.success.accessible a {
-      background-color: #42c79c;
+      background-color: #177355;
     }
 
     .actionbar {
-      background-color: #42c79c;
+      background-color: #177355;
       display: flex;
     }
 
