Changement de police

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
     body {
       background-color: #f7f3ef;
+      font-family: -apple-system, 'Ubuntu', system-ui, sans-serif;
     }
 
     .bg-dark {
@@ -48,7 +49,7 @@
       border: none;
       background-color: #cf5600;
       text-align: center;
-      font-size: 1.4em;
+      font-size: 1.2em;
       color: white;
       text-decoration: none;
       margin: 16px auto;
