Amélioration des marges

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
       color: inherit;
     }
 
+    p {
+      padding: 12px;
+    }
+
     #superapp {
       margin: 0 auto;
       overflow: auto;
@@ -120,6 +124,7 @@
     .actionbar {
       background-color: #177355;
       display: flex;
+      align-items: center;
     }
 
     .actionbar-gamename {
