Amélioration du contraste d'un niveau non terminé

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     }
 
     .level.accessible a {
-      background-color: #8c5d63;
+      background-color: #842733;
     }
 
     .level.success.accessible a {
