Nettoyage du CSS

--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
   <meta name="description" content="Petit jeu de réflexion." />
 
   <style>
+    :root {
+      --background-color: #f7f3ef;
+      --dark-background-color: #222;
+
+      --primary-color: #177355;
+      --primary-color-darker: #053123;
+
+      --secondary-color: #cf5600;
+      --secondary-color-darker: #642d06;
+    }
+
     html,
     body {
       margin: 0;
@@ -20,18 +31,11 @@
     }
 
     body {
-      background-color: #f7f3ef;
+      background-color: var(--background-color);
       font-family: -apple-system, 'Ubuntu', system-ui, sans-serif;
     }
 
-    .bg-dark {
-      background-color: #222;
-    }
-
-    button,
-    input,
-    textarea,
-    select {
+    button {
       font: inherit;
       color: inherit;
     }
@@ -40,19 +44,15 @@
       padding: 12px;
     }
 
-    #superapp {
-      margin: 0 auto;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      overflow: hidden;
+    .bg-dark {
+      background-color: var(--dark-background-color);
     }
 
     .btn {
       padding: 10px 20px;
       display: inline-block;
       border: none;
-      background-color: #cf5600;
+      background-color: var(--secondary-color);
       text-align: center;
       font-size: 1.2em;
       color: white;
@@ -62,14 +62,14 @@
 
     .btn:focus,
     .btn:hover {
-      outline: 3px solid #642d06;
+      outline: 3px solid var(--secondary-color-darker);
       cursor: pointer;
     }
 
     .btn-play {
       padding: 20px 40px;
       display: inline-block;
-      color: #cf5600;
+      color: var(--secondary-color);
       border: 2px solid currentColor;
       border-bottom-width: 12px;
       text-align: center;
@@ -81,7 +81,7 @@
 
     .btn-play:focus,
     .btn-play:hover {
-      color: #401f08;
+      color: var(--secondary-color-darker);
       cursor: pointer;
       outline: none;
     }
@@ -92,7 +92,7 @@
       grid-template-columns: repeat(auto-fill, 60px);
       gap: 16px;
       overflow: auto;
-      scrollbar-color: #177355 rgba(0, 0, 0, 0.3);
+      scrollbar-color: var(--primary-color) rgba(0, 0, 0, 0.3);
       scrollbar-width: thin;
       margin: 12px;
       margin-top: 32px;
@@ -111,7 +111,7 @@
 
     .level a:focus,
     .level a:hover {
-      outline: 3px solid #053123;
+      outline: 3px solid var(--primary-color-darker);
     }
 
     .level.accessible a {
@@ -119,11 +119,11 @@
     }
 
     .level.success.accessible a {
-      background-color: #177355;
+      background-color: var(--primary-color);
     }
 
     .topbar {
-      background-color: #177355;
+      background-color: var(--primary-color);
       display: flex;
     }
 
@@ -197,26 +197,20 @@
       cursor: pointer;
     }
 
-    #app-wrapper {
-      height: 100%;
-      display: grid;
-      align-content: center;
-    }
-
-    .middle {
+    .main-wrapper {
       flex: 1;
       display: flex;
       align-items: center;
     }
 
-    .middle-content {
+    .main-content {
       flex: 1;
       display: flex;
       flex-direction: column;
     }
 
     .bottombar {
-      background-color: #177355;
+      background-color: var(--primary-color);
       display: flex;
       font-size: 80%;
     }
@@ -227,7 +221,21 @@
 
     .bottombar .btn:focus,
     .bottombar .btn:hover {
-      outline-color: #053123;
+      outline-color: var(--primary-color-darker);
+    }
+
+    #superapp {
+      margin: 0 auto;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      overflow: hidden;
+    }
+
+    #app-wrapper {
+      height: 100%;
+      display: grid;
+      align-content: center;
     }
   </style>
 </head>
