Joystick outside canvas

--- a/index.html
+++ b/index.html
@@ -240,6 +240,10 @@
       display: grid;
       align-content: center;
     }
+
+    #joystick {
+      position: absolute;
+    }
   </style>
 </head>
 
