Première interface de fin de jeu

--- a/index.html
+++ b/index.html
@@ -41,11 +41,24 @@
     }
 
     p {
-      padding: 12px;
+      padding: 8px;
+      margin: 8px;
+    }
+
+    .center {
+      text-align: center;
     }
 
     .bg-dark {
       background-color: var(--dark-background-color);
+    }
+
+    .end-game {
+      background-color: #ddd;
+    }
+
+    .end-game p {
+      font-size: 130%;
     }
 
     .btn {
