Possibilité d'utiliser le joystick n'importe où sur l'écran

--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
       text-align: center;
     }
 
+    .overflow-hidden {
+      overflow: hidden;
+    }
+
     .bg-dark {
       background-color: var(--dark-background-color);
     }
