Nettoyage des écrans

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       background-color: var(--primary-color);
     }
 
-    .topbar {
+    #topbar {
       background-color: var(--primary-color);
       display: flex;
     }
@@ -243,18 +243,18 @@
       flex-direction: column;
     }
 
-    .bottombar {
+    #bottombar {
       background-color: var(--primary-color);
       display: flex;
       font-size: 80%;
     }
 
-    .bottombar .btn {
+    #bottombar .btn {
       background-color: rgba(255, 255, 255, 0.15);
     }
 
-    .bottombar .btn:focus,
-    .bottombar .btn:hover {
+    #bottombar .btn:focus,
+    #bottombar .btn:hover {
       outline-color: var(--primary-color-darker);
     }
 
