Pixelisation via CSS plutôt que via JS

--- a/index.html
+++ b/index.html
@@ -274,6 +274,10 @@
       align-content: center;
     }
 
+    #app {
+      image-rendering: crisp-edges;
+    }
+
     #joystick {
       position: absolute;
     }
