Ajout d'un favicon

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <meta name="description" content="Petit jeu de réflexion." />
 
   <link rel="stylesheet" type="text/css" href="style.css" />
+
+  <link rel="icon" type="image/png" href="assets/img/favicon.png" />
 </head>
 
 <body>
