Complétion des balises <title> et <meta description>

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Bobby</title>
-  <meta name="description" content="Petit jeu de réflexion." />
+  <title>Bobby — Jeu 2D de réflexion</title>
+  <meta name="description" content="
+    Petit jeu 2D de réflexion/puzzle.
+    Réussissez tous les niveaux.
+    Pour chaque niveau, récupérer toutes les pièces puis atteindre la sortie." />
 
   <link rel="stylesheet" type="text/css" href="style.css" />
 
