--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -11,12 +11,17 @@
     Réussissez tous les niveaux.
     Pour chaque niveau, récupérer toutes les pièces puis atteindre la sortie." />
 
-  <link rel="stylesheet" type="text/css" href="style.css" />
-
   <link rel="icon" type="image/png" href="assets/img/favicon.png" />
 </head>
 
 <body>
+  <noscript>
+    <p>
+      Ce jeu nécessite JavaScript pour fonctionner.
+    </p>
+  </noscript>
+
+
   <div id="app">
     <div class="page"></div>
   </div>
