--- a/android/app/src/main/assets/webview/index.html
+++ b/android/app/src/main/assets/webview/index.html
@@ -1,4 +1,4 @@
 <!doctype html><html lang="fr"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Bobby — Jeu 2D de réflexion</title><meta name="description" content="
     Petit jeu 2D de réflexion/puzzle.
     Réussissez tous les niveaux.
-    Pour chaque niveau, récupérer toutes les pièces puis atteindre la sortie."/><link rel="icon" href="favicon.png"><meta name="theme-color" content="#42c79c" /><link rel="manifest" href="manifest.0efbb9056318c56bfc15cc2be9f0a863.json" /></head><body><noscript><p>Ce jeu nécessite JavaScript pour fonctionner.</p></noscript><div id="app"><div class="page"></div></div><script src="app-00fa2a71da926ed8e31d.js"></script></body></html>
+    Pour chaque niveau, récupérer toutes les pièces puis atteindre la sortie."/><link rel="icon" href="favicon.png"><script defer="defer" src="app-8eb11cde0707b205d85c.js"></script><meta name="theme-color" content="#42c79c" /><link rel="manifest" href="auto/manifest.b73d8c306b0c30fa97afe7d8e040e362.json" /></head><body><noscript><p>Ce jeu nécessite JavaScript pour fonctionner.</p></noscript><div id="app"><div class="page"></div></div></body></html>
